# Python-Streams

./: .pre-commit-config.yaml  README.md  pyproject.toml
python_streams/: __init__.py  steams.py  streams.py
tests/: test_operations.py  test_stream.py  test_terminals.py
