[tool.poetry]
name = "python-streams"
version = "0.1.0"
description = ""
authors = ["Zac Scott <zac.scott11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
